Add livedata with backing property and transformation in ViewModel. Update login and register database and ui.

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,7 +12,7 @@
             android:title="@string/supported_currencies" />
 
         <item
-            android:id="@+id/nav_login_register"
-            android:title="@string/login_register" />
+            android:id="@+id/nav_logout"
+            android:title="@string/logout" />
     </group>
 </menu>
